test_fixtures/variable/use_nil_as_var.lox
// ParserError: UnexpectedToken found Nil from l2c5 to l2c8 expected Identifier
var nil = "value";
